refactor: api endpoint
